# rust-zmanim-project

./: .gitmodules  Cargo.toml  README.md  a.py  todo. We are only generating one of two dat
.github/workflows/: astronomical-calculator.yml  ci.yml  embedded-tz.yml  hebrew-holiday-calendar.yml  limudim-calendar.yml  release.yml  test-bindings.yml  zmanim-calculator.yml
crates/astronomical-calculator/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  ty.toml
crates/astronomical-calculator/.github/workflows/: ci.yml
crates/astronomical-calculator/c_src/: spa.c  spa.h
crates/astronomical-calculator/examples/: lakewood_nj.rs
crates/astronomical-calculator/proptest-regressions/: tests.txt
crates/astronomical-calculator/proptest-regressions/tests/: continuity_tests.txt  spa_tests.txt
crates/astronomical-calculator/src/: _tests.rs  csv_tests.rs  freespa.rs  geo.rs  lib.rs  math.rs  raw.txt  spa.rs  spa2.rs  spa_compat_tests.rs  tables.rs  terms.rs  tests copy.rs  tests.rs  time.rs  types.rs  unsafe_spa.rs  unsafe_spacopy.rs
crates/astronomical-calculator/src/_tests/: continuity_tests.rs  spa_tests.rs
crates/astronomical-calculator/src/tests/: gen.py  geonames_tests.rs  mod.rs  reasonable.csv  spa_tests.rs  suncalc_tests.rs  unreasonable.csv  unsafe_spa.rs
crates/astronomical-calculator/test_data/: gen.py  main.py  pyproject.toml  solar_test_data.csv  solar_test_data1.csv
crates/embedded-tz/: .gitignore  Cargo.toml  README.md  build.rs
crates/embedded-tz/.github/workflows/: rust.yml
crates/embedded-tz/proptest-regressions/: bundled.txt  bundled_tz_proptest.txt
crates/embedded-tz/scripts/: build-tzdb.sh
crates/embedded-tz/src/: bundled.rs  bundled_tz_proptest.rs  bundled_tzdb.rs  lib.rs  once_cell.rs
crates/hebrew_holiday_calendar/: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
crates/hebrew_holiday_calendar/src/: java_tests.rs  lib.rs  molad.rs  parshas.rs
crates/limudim-calendar/: Cargo.toml  README.md
crates/limudim-calendar/.github/workflows/: ci.yml
crates/limudim-calendar/limudim-wasm/: Cargo.toml  daf_hashavua.test.ts  daf_yomi.test.ts  mishna_yomi.test.ts  package.json  pirkei_avos.test.ts  tehillim_monthly.test.ts  yerushalmi_yomi.test.ts
crates/limudim-calendar/limudim-wasm/src/: lib.rs
crates/limudim-calendar/src/: amud_yomi_bavli_dirshu.rs  constants.rs  cycle.rs  daf_hashavua_bavli.rs  daf_yomi_bavli.rs  daf_yomi_yerushalmi.rs  date.rs  interval.rs  lib.rs  limud_calculator.rs  mishna_yomis.rs  pirkei_avos.rs  tehillim_monthly.rs  units.rs
crates/zmanim-calculator/: .gitignore  .gitmodules  Cargo.toml  README.md  codecov.yaml
crates/zmanim-calculator/.github/workflows/: ci.yml  example-c-project.yml  release.yml
crates/zmanim-calculator/example-c-project/: build_and_run.ps1  build_and_run.sh  main.c
crates/zmanim-calculator/scripts/: generate_c_api_presets.py
crates/zmanim-calculator/src/: c_api.rs  calculator.rs  duration_helper.rs  lib copy.rs  lib.rs  math.rs  molad.rs  presets.rs  primitive_zman.rs  tests.rs  zman.rs  zmanim.rs  zmanim_calendar_tests.rs  zmanim_impl.rs
crates/zmanim-calculator/src/java_tests/: java_bindings.rs  java_rnd.rs  mod.rs
crates/zmanim-calculator/src/types/: config.rs  error.rs  location.rs  zman.rs
test/: README.md  analysis_options.yaml  build.dart  flutter_rust_bridge.yaml  jnigen.dart  pubspec.yaml
test/hook/: build.dart
test/lib/: kosher_java.g.dart  rnd.dart
test/lib/src/: rnd.dart  test_case.dart
test/lib/src/java/: kosher_java.g.dart
test/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
test/rust/: Cargo.toml
test/rust/src/: frb_generated.rs  lib.rs
test/rust/src/api/: mod.rs
test/test/: minimal_test.dart
