[package]
name = "astronomical-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Moshe Dicker"]
description = "High-precision astronomical calculations for solar position, sunrise/sunset times, and related phenomena"
license = "MIT"
repository = "https://github.com/dickermoshe/astronomical-calculator"
keywords = ["astronomy", "solar", "sun", "sunrise", "sunset"]
categories = ["science", "date-and-time"]
rust-version = "1.70"


[dependencies]
core_maths = "0.1.1"
chrono = { version = "0.4.42", default-features = false }
thiserror = { version = "2.0.17", default-features = false }


[features]
default = []

[dev-dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "arbitrary",
] }
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }
proptest-arbitrary-interop = "0.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
index_overflow = "deny"
excessive_precision = "allow"

[lints.rust]
missing_docs = "warn"
