[package]
name = "astronomical-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Moshe Dicker"]
description = "High-precision astronomical calculations for solar position, sunrise/sunset times, and related phenomena"
license = "MIT"
repository = "https://github.com/dickermoshe/astronomical-calculator"
readme = "README.md"
keywords = ["astronomy", "solar", "sun", "sunrise", "sunset"]
categories = ["science", "date-and-time"]
rust-version = "1.70"


[dependencies]
core_maths = "0.1.1"
chrono = { version = "0.4.42", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
julian_day_converter = { version = "0.4.5", default-features = false }


[features]
default = []

[dev-dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "arbitrary",
    "serde",
] }
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }
proptest-arbitrary-interop = "0.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
sunrise = "2.1.0"
serde_json = "1.0.147"
rand = "0.8"
chrono-tz = "0.10.4"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
index_overflow = "deny"
excessive_precision = "allow"

[lints.rust]
missing_docs = "warn"
