[package]
name = "embedded-tz"
version = "0.5.2"
authors = [
    "kennytm <kennytm@gmail.com>",
    "Moshe Dicker <dickermoshe@gmail.com>",
]
edition = "2018"
description = "embedded/no_std chrono::TimeZone implementation for TZif data"
license = "MIT"
repository = "https://github.com/dickermoshe/rust-zmanim-project"

[features]
bundled-tzdb = []

[dependencies]
byteorder = "1.3"
chrono.workspace = true

[dev-dependencies]
lazy_static.workspace = true
criterion = "0.3"
chrono-tz.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
proptest.workspace = true
