[package]
name = "hebrew_holiday_calendar"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust library for working with the Hebrew calendar, including holidays, Torah readings (parshiyot), and calendar calculations with no_std support"
license = "LGPL-2.1"
repository = "https://github.com/dickermoshe/hebrew_holiday_calendar"
readme = "README.md"
keywords = ["hebrew", "calendar", "jewish", "holidays", "torah"]
categories = ["date-and-time", "no-std"]
exclude = [".github", "kosher-java", "target"]

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.2"

[dependencies.chrono]
version = "0.4.41"
default-features = false

[dependencies.num_enum]
version = "0.7.5"
default-features = false

[dependencies.icu_calendar]
version = "2.0.3"
features = ["unstable"]
default-features = false

[dev-dependencies]
lazy_static = "1.5.0"
rand = "0.8.5"
tinystr = "0.8.2"

[dev-dependencies.j4rs]
git = "https://github.com/astonbitecode/j4rs"
rev = "478273"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"


[lints]
workspace = true
