[package]
name = "hebrew_holiday_calendar"
version = "0.2.2"
edition = "2021"
description = "A comprehensive Rust library for working with the Hebrew calendar, including holidays, Torah readings (parshiyot), and calendar calculations with no_std support"
license = "LGPL-2.1"
repository = "https://github.com/dickermoshe/hebrew_holiday_calendar"
readme = "README.md"
keywords = ["hebrew", "calendar", "jewish", "holidays", "torah"]
categories = ["date-and-time", "no-std"]
exclude = [".github", "kosher-java", "target"]

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { workspace = true, optional = true }
chrono.workspace = true
num_enum.workspace = true
icu_calendar.workspace = true

[dev-dependencies]
chrono-tz.workspace = true
lazy_static.workspace = true
rand.workspace = true
tinystr.workspace = true
j4rs.workspace = true

[lints]
workspace = true
