[package]
name = "limudim-calendar"
version = "0.5.2"
description = "A comprehensive Rust library for calculating Jewish learning schedules with the Hebrew calendar with no_std support"
edition = "2021"
repository = "https://github.com/dickermoshe/rust-zmanim-project"
documentation = "https://docs.rs/limudim-calendar"
homepage = "https://github.com/dickermoshe/rust-zmanim-project"
license = "LGPL-2.1"
readme = "README.md"
exclude = ["limudim-wasm"]

[features]
default = []
defmt = ["dep:defmt", "hebrew_holiday_calendar/defmt"]

[dependencies]
defmt = { workspace = true, optional = true }
hebrew_holiday_calendar.workspace = true
icu_calendar.workspace = true

[lints]
workspace = true
