[package]
name = "zmanim-calculator"
version = "0.1.0"
description = "A comprehensive Rust library for calculating Zmanim with no_std support"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/dickermoshe/rust-zmanim-project"
homepage = "https://github.com/dickermoshe/rust-zmanim-project"
documentation = "https://docs.rs/zmanim-calculator"

[features]
# By default, only the core functionality is enabled.
default = []
# Enable this feature to use the standard library.
std = []
# Enable this feature to use the defmt crate for logging.
defmt = ["dep:defmt"]
# Enable this feature to use the C API.
c = ["std", "dep:interoptopus", "dep:interoptopus_backend_c"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
astronomical-calculator.workspace = true
icu_calendar.workspace = true
chrono.workspace = true
time = { version = "0.3.47", default-features = false }
defmt = { workspace = true, optional = true }
core_maths.workspace = true
hebrew_holiday_calendar.workspace = true
thiserror.workspace = true
interoptopus = { version = "0.14.27", optional = true }
interoptopus_backend_c = { version = "0.14.25", optional = true }

[dev-dependencies]
chrono = { workspace = true, features = ["std"] }
lazy_static.workspace = true
j4rs.workspace = true
num_enum.workspace = true
proptest.workspace = true
rand.workspace = true
tinystr.workspace = true
tzf-rs = "1.1.3"
chrono-tz.workspace = true

[lints]
workspace = true
