[package]
name = "zmanim-calculator"
version = "0.5.2"
description = "A comprehensive Rust library for calculating Zmanim with no_std support"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/dickermoshe/rust-zmanim-project"
homepage = "https://github.com/dickermoshe/rust-zmanim-project"
documentation = "https://docs.rs/zmanim-calculator"

[features]
# By default, only the core functionality is enabled.
default = []
# Enable this feature to use the standard library.
std = []
# Enable this feature to use the defmt crate for logging.
defmt = ["dep:defmt"]


[dependencies]
astronomical-calculator = { workspace = true, features = ["defmt"] }
icu_calendar.workspace = true
chrono.workspace = true
time = { version = "0.3.47", default-features = false }
defmt = { workspace = true, optional = true }
core_maths.workspace = true
hebrew_holiday_calendar.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["std"] }
lazy_static.workspace = true
j4rs.workspace = true
num_enum.workspace = true
proptest.workspace = true
rand.workspace = true
tinystr.workspace = true
tzf-rs = "1.1.3"
chrono-tz.workspace = true

[lints]
workspace = true
