[package]
name = "test_with_java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
flutter_rust_bridge = { version = "2.11.1", features = ["chrono"] }
lazy_static.workspace = true
tzf-rs = "1.1.5"
zmanim-calculator = { features = ["_java_testing"], workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
