[package]
name = "limudim-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
limudim-calendar.workspace = true
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
icu_calendar.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
